--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -243,4 +243,78 @@ social-icons {
     /* Hover effect */
 }
 
+.container {
+            max-width: 100vw !important;
+            padding-right: 0 !important;
+            margin-right: 0 !important;
+        }
 
+        .row {
+            margin-right: 0 !important;
+        }
+
+        body {
+            overflow-x: hidden;
+        }
+  
+
+        html,
+        body {
+            max-width: 100vw;
+            overflow-x: hidden !important;
+        }
+
+        body {
+            box-sizing: border-box;
+        }
+
+        section,
+        footer,
+        nav,
+        .container,
+        .row,
+        .col-12 {
+            box-sizing: border-box;
+        }
+    
+
+        html,
+        body {
+            max-width: 100vw;
+            overflow-x: hidden !important;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            box-sizing: border-box;
+        }
+
+        section,
+        footer,
+        nav,
+        .container,
+        .row,
+        .col-12 {
+            box-sizing: border-box;
+        }
+
+        /* Remove default padding from container-fluid */
+        .container-fluid {
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+            margin-left: 0 !important;
+            margin-right: 0 !important;
+            width: 100% !important;
+        }
+
+        /* For full width sections */
+        .full-width-section {
+            width: 100vw;
+            position: relative;
+            left: 50%;
+            right: 50%;
+            margin-left: -50vw;
+            margin-right: -50vw;
+        }
+            
